work in progress

--- a/copyright.tex
+++ b/copyright.tex
@@ -1,14 +1,14 @@
 \thispagestyle{empty}
 \noindent
 {\rm SHIVAPADA RATNAKOSHA}\\[5pt]
-{\rm (Veerashaiva-lingayata Samagra Paribhashika Padakosha),}\\[4pt]
-{\rm Prepared by Editorial committe,}\\[4pt]
+{\rm (Veerashaiva-Lingayata Samagra Paribhashika Padakosha)}\\[4pt]
+{\rm Prepared by Editorial Committe}\\[4pt]
 {\rm Published by JSS Granthamale, Mysuru.}
 
 \vspace{1cm}
 
 \noindent
-{\rm Pages. xxxiv--896}\\[7pt]
+{\rm Pages : xxxiv--896}\\[7pt]
 {\rm \copyright \ Publishers}\\[7pt]
 {\rm First Edition : 2019}\\[7pt]
 {\rm No. of Copies : 1000}\\[7pt]
@@ -17,7 +17,7 @@
 \bigskip
 
 \noindent
-{\rm Typeset by : Sriranga Digital Software Technologies Pvt. Ltd., Srirangapatna.}
+{\rm Typeset by : Sriranga Digital Software Technologies Pvt. Ltd., Srirangapatna}
 
 \medskip
 
@@ -44,7 +44,7 @@ bele : \rupee
 \bigskip
 
 \noindent
-akaSxra joVDaNe : shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf, perxY. li., shirxVraMgapaTaTxNa.
+akaSxra joVDaNe : shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf, perxY. li., shirxVraMgapaTaTxNa
 
 \medskip
 
@@ -68,11 +68,10 @@ mudarxkaru : ????????
 {\fontsize{14pt}{16pt}\selectfont
 porx. ji.esf. sidadhxliMgayayx\\[7pt]
 DA. Ti.vi. veMkaTAcala shAsitxrXV\\[7pt]
-DA. esf. vidAyxshaMkarf\\[7pt]
+DA. esf. vidAyxshaMkara\\[7pt]
 DA. enf.esf. tArAnAtha\\[7pt]
-DA. e.vi. nAgarAjarAvf\\[7pt]
+DA. ecf.vi. nAgarAjarAvf\\[7pt]
 DA. si. shivakumArasAvxmi\\[7pt]
-DA. go.ru. cananxbasapapx\\[7pt]
 porx. esf. naMjuMDayayx\\[7pt]
 shirxV Arf.esf. pUNARnaMda\\[7pt]
 DA. naMdiVshf haMce (kAyaRnivARhaka saMpAdaka)}\relax
