--- a/nivedane.tex
+++ b/nivedane.tex
@@ -107,9 +107,51 @@ BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNey
 {\large\bf muKayx ulelxVKa}
 \end{center}
 
-I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqti rUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva pada samucaCxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqti rUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege nAda: (pUtiR niVDi - puTa-365)}
+I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqti rUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva pada samucaCxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqti rUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege: nAda.}
 
-\bigskip
+\begin{entry}
+\word{nAda}\label{nAda}
+\meaning{\artha{shiva; sAthxvara-jaMgamAtamxkavAda jagatutx biMdu-nAdarUpa\-dalilxde. avugaLalilx shakitxyu biMdu. shivanu nAda. nAdavu biMduvige AdhAra. biMduvu jagatitxge AdhAra. iveraDara samAgama jagatitxge AdhAravAgive:}}
+\medskip
+\begin{shl}
+biMdunAdAtamxkaM savaRM jagatf sAthxvarajaMgamamf |\\[2pt]
+biMduH shakitxH shivoV nAdaH shivashakAtxyXtamxkaM jagatf ||\\[2pt]
+nAdAdhAramayaM biMduH biMdAvxdhAramidaM jagatf |\\[2pt]
+jagadAdhAraBUtw hi biMdunAdw vayxvasithxtw ||\\[-2pt]
+\end{shl}
+\pauthor{(caM.A., kirx.pA., 3. 13-14, 17)}
+\medskip
+\newmeaning{\artha{nAda biMdu kale eMba jagatitxge kAraNavAda mUru tatatxvXgaLalilx oMdu. nAdarUpavAda shivaneV liMga:}}
+\medskip
+\begin{shl}
+nAdarUpaH shivaH sAkASxlilxMgamitayxBidhiVyateV |
+\end{shl}
+\pauthor{(sU.A., kirx.pA., 6.3)}
+\medskip
+\begin{shl}
+biMduH shakitxH shivoV nAdaH kalA saMyoVga Eva ca |\\[2pt]
+shivashakotxyXVBaRveVdoyxVgoV jagatfsaqSaTxyXthaRkAraNamf |\\[-2pt]
+\end{shl}
+\pauthor{(shi.ta.ra., BA-1, 1.4.25)}
+\medskip
+\begin{shl}
+nAdoV liMgamiti porxVkotxV biMduraMgamitiVritaH\\[2pt]
+kalA saMyoVga ituyxkAtx tayoVliRMgAMgayoVsatxthA\\[-2pt]
+\end{shl}
+\pauthor{(shivasU. 29-68)}
+\smallskip
+\newmeaning{\ullekha{nAda munanxvo biMdu munanxvo? kAya munanxvo jiVva \hbox{munanxvo}? (savasaM. 2; alalxma. 659-178); nAdadoLagaNa cinAnxdava toVrisayayx, biMduvoLagaNa cidibxMduva toVrisayayx. kaleyoLagaNa citakxleya toVrisayayx (savasaM. 10; jakakxNa. 1542-641); hadinAru kaLeya parxBeya musukida nAdavanunx nAdadi biMdu kaLeyanoMdumADi ninAda\-BASayxviDiduda parxshiKA eMdene (hirimaM. 687-17).}
+\artha{dhavxni; shabadx:}
+\ullekha{I parxNavaMgaLa nAdaMgaLAvAveMdaDe: peNudxMbi\-nAda, veVNunAda, GaMTAnAda ...divayxnAda I nAdaM\-gaLu. I nAdaMgaLige piMDaMgaLAvAveMdaDe BakatxneMba piMDa ...cinUmxtiR\-yeMba piMDa (savasaM. 3; cenanxba. 1268-441); Barxmara, veVNu, GaMTA, BeVri, meVGa, parxNama, divayx, siMha, mahatf ivu nAda\-gaLu, ywgika cihenx\-gaLu (shivAkoV. 142-342).} \artha{barxhamx\-savxrUpavAda dhavxnivisheVSa:}
+\ullekha{mU{\ru} te{\ra}nAgi kaLe nAda varabiMdu\-veMdu BeVdisidAdideVshikana caraNAMbujakekx \hbox{sharaNu} (shivaciM. 50-19).} \artha{`namaHshivAya' eMba pavitarxmaMtarxda paThaNa; shivamaMtarxda japa:}
+\ullekha{Adi akaSxravanu AreYdu toVridiri OraMte enanx saduhaqdayanenisi nAdakaLegaLanenanx AdikaradoLagiTuTx (savasaM. 4; \hbox{sidadhxrA}. 157-46).} \artha{parashiva:}
+\ullekha{nAdapirxya shiva\-neMbaru, nAdapirxya shivanalalxyAyx (savasaM. 1; basava. 181-46);\break nAdaveV liMga biMduveV piVThanAgi shivashakitxsaMpuTavAda \hbox{paMcamada} kameRVsha liMganivaRyala piMDa aMgaveMba piMDa tadUrxpavaneyidx paripUNaR piMDAkAsharUpa tAnAgi (savasaM. 8; moVLige. 987-307); nAdaveV liMga guru satapxrXNava\-rUpalA (viVsheYpu. 1-6-37);}}
+\vskip 5pt
+\newmeaning{\ni{nadf+Gacnx, nadati iti - nAdaH}}
+\end{entry}
+
+\newpage
+
 \begin{center}
 {\large\bf parxyoVgagaLa anukarxmaNike vidhAna}
 \end{center}
@@ -119,7 +161,31 @@ oMdu shabadxkekx parxyoVgagaLanunx niVDuvAga modalige saMsakxqqta parxyoVgagaLan
 
 \medskip
 
-saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana saMpuTada eSaTxneya saMpuTa hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxyanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. uhAharaNege : Eka\-BAjanasathxla: \textbf{(pUtiR niVDi - puTa-141)athaR vivaraNe}
+saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana saMpuTada eSaTxneya saMpuTa hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxyanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. {\bf uhAharaNege : Eka\-BAjanasathxla.} 
+
+\begin{entry}
+\word{EkaBAjanasathxla}\label{EkaBAjanasathxla}
+\meaning{\arthanonum{aikayxsathxlada nAlukx avAMtarasathxlagaLalilx oMdu;
+shivanoMdige beretuhoVda sAdhakanige elalxvU shivAdevxYta eMdu
+BAvisuva sithxti; I jagatetxlalxvU shivamayaveMdu BAvisuva sAdhakanige shivanobabxneV
+EkeYka AsharxyanAgidAdxne eMdu nirUpisuva sathxla; tananxnunx, samasatx jagatatxnunx
+matutx shivananunx oMdAgi (adevxYta) BAvisuvudariMda shivaparxsAdavU tananx parxsAdaveV
+Agide eMba parxsAdadalilx aikayxmatiyuLaLxvanAgutAtxne:}}
+\medskip
+\begin{shl}
+aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |\\[1pt]
+aikayxmAcArasaMpatitxH EkaBAjanameVva ca ||\\[3pt]
+vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |\\[1pt]
+shiveYkaBAjanAtamxtAvxdeVkaBAjanamucayxteV ||\\[3pt]
+savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |\\[1pt]
+EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||\\[-2pt]
+\end{shl}
+\pauthor{(si.shi., 14. 3, 28-29)}
+\smallskip
+\newmeaning{\ullekha{EkaBAjanasathxla, sahajaBoVjanasathxla eMba eMTu sathxlaM\-gaLanunx sheVSAMgasavxrUpavAda sharaNa paripUNaR jAcnxnAnuBavadalilx kaMDu (savasaM. 14; SaNumxKa. 336-200); adhikaliMgeY\-kayxMge BoVjanavadaMtA mahAliMgavadakeYkayxneV BAjanaM divxnAmaMgaLa\-Dagi muMteVkavA liMgadoLageraDanuLivutoVraMte savARMgamaM liMgadoLagaM berasidaMtapapxvaMgeVkaBAjanasathxlaM (viVsheYpu. 8-125-60); savARMga\-liVna savARcArasaMpananx\-vAda liMgeYkayxMge mahAliMgave BAjanavAmahAliMgakAkx mahAliMgeYkayxne BAjanavAgi eraDilalxdipuRdeMtidiR\-tetxMdoDe muMdeVkaBAjanasathxlavAdudu (keYvasha. 75-1 sUtarx).}}
+\vskip 5pt
+\newmeaning{\ni{EkaBAjanaM iti sathxlaM - EkaBAjanasathxlaM}}
+\end{entry}
 
 \medskip
 
@@ -134,7 +200,15 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 {\bf pUNaR virAma (.)}
 \end{center}
 \begin{itemize}
-\item muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDalAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. \textbf{udAharaNege: nAdacakarx(pUtiR niVDi - puTa-365)}
+\item muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDalAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. \textbf{udAharaNege: nAdacakarx.}
+
+\begin{entry}
+\word{nAdacakarx}\label{nAdacakarx}
+\src{va}
+\meaning{\arthanonum{cakarxvu ratha calisalu AdhAravAgiruvaMte pArxpaMcika vayxvahAragaLige kAraNavAgiruva shivashakitx; mUla\-tatatxvX:}
+\ullekha{kAlacakarx kamaRcakarx nAdacakarx biMducakarx I nAlukx cakarxva sAdhisiheveMba hiriyarelalx keTuTxhoVdaru ...nAdacakarx jaMgama\-keSxVtarx biMducakarx parxsAdakeSxVtarx (savasaM. 3; cenanxba. 293-92); kAlacakarx kamaRcakarx nAdacakarx biMducakarxdoLage huTaTxda yoVni\-yilalx, meTaTxda nelavilalx (savasaM. 3; cenanxba. 1151-397).}}
+\newmeaning{\ni{nAdasayx cakarxM - nAdacakarxM}}
+\end{entry}
 \end{itemize}
 
 \medskip
@@ -154,7 +228,15 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \begin{enumerate}
 \item parxyoVgavanunx koDuvAga adara Akaravanunx tiLisuvAga kaMsada oLage adaralUlx vacanagaLa saMpuTavanunx tiLisuvAga AyA saMpuTagaLa saMKeyxya naMtara I cihenxyanunx baLasalAgide.
 
-\item  parxyoVgavanunx koDuvAga oMdu parxyoVga mugidu matotxMdu parxyoVga AraMBavAguva munanx  adhaRvirAmavanunx baLasalAgide. uhAharaNege \textbf{aMgatarxya : parxyoVgada BAgavanunx niVDuvudu-puTa-3)}
+\item  parxyoVgavanunx koDuvAga oMdu parxyoVga mugidu matotxMdu parxyoVga AraMBavAguva munanx  adhaRvirAmavanunx baLasalAgide. \textbf{uhAharaNege : aMgatarxya}
+
+\begin{entry}
+\word{aMgatarxya}\label{aMgatarxya}
+\src{va}
+\meaning{\artha{tAyxgAMga, BoVgAMga matutx yoVgAMga eMba mUru shariVragaLu. ivugaLu karxmavAgi sUthxla (deVha), sUkaSxmX (pArxNa), kAraNa (Atamx) shariVragaLenisive.}
+\artha{ivugaLu karxmavAgi sUthxla, sUkaSxmX matutx kAraNa eMba mUru shariVragaLu.}
+\artha{shudadhx, nimARya, nimaRla eMba mUru aMgagaLu (deV.saM.ba., va. 1196).}}
+\end{entry}
 \end{enumerate}
 
 \medskip
@@ -164,6 +246,9 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \end{center}
 
 parxdhAna ulelxVKada naMtara hAgU shabadxkekx athaRvanunx koDuva modalu hAgU parxyoVgagaLanunx niVDuva modalu vivaraNa virAmavanunx upayoVgisalAgide. \textbf{udAharaNege: aMgaBavi:(va). shivadiVkASx saMsAkxravilalxdavanu; liMgAMga sAmarasayxvilalxdavana deVha:}
+
+\newpage
+
 \begin{center}
 {\bf udadhxraNa cihenx (`` \ \ '')}
 \end{center}
@@ -239,7 +324,7 @@ athaRgaLanunx niVDuvAga adaroLage matotxMdu pAriBASika pada udadhxqqtavAdare oMd
 \item muKayx ulelxVKadalilx saMsakxqqta rUpagaLige badalige samasaMsakxqqta rUpagaLanunx niVDalAgide. keVvala saMsakxqqta parxyoVgagaLidadxrU ideV niyamavanunx anusarisalAgide. udAharaNe: \textbf{diVkASx = diVkeSx} hiVge. 
 \end{enumerate}
 
-\newpage
+\bigskip
 
 \begin{center}
 {\large\bfseries 3}
@@ -268,4 +353,4 @@ I garxMtha rUpagoLuLxvalilx sahakarisida viBAgada nideVRshakarAgidadx ke.si shiv
 
 \hfill {\bf DA. naMdiVshf haMce}\qquad\,
 
-\hfill (kAyaRnivARhaka saMpAdakaru)
+\hfill kAyaRnivARhaka saMpAdakaru
