--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -95,7 +95,7 @@
 %\hline
 30 & shirUra bi.vihx., hubabxLiLx\\
 %\hline
-31 & shiVlAkumAri, meYsUru\\
+31 & shiVlAkumAri Di., meYsUru\\
 %\hline
 32 & sheYlaja ecf.Ti., meYsUru\\
 %\hline
@@ -103,14 +103,14 @@
 %\hline
 34 & sarasavxti ke.ecf., meYsUru\\
 %\hline
-35 & saroVjamamxNeNx eM.si., meYsUru\\
+35 & saroVjamamxNiNx eM.si., meYsUru\\
 %\hline
 36 & sidadhxgaMgamamx ke.Arf., beLagAM\\
 %\hline
 37 & sumaMgaLamamx esf., tumakUru\\
 %\hline
 38 & suvaNaR bi.bi., shivamogagx\\
-39 &  selavxlapx, beMgaLUru\\
+39 &  selavxpapx, beMgaLUru\\
 %\hline
 \end{longtable}}
 \end{minipage}
