--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -2,7 +2,7 @@
 %{\Huge\bfseries anubaMdha 3}
 
 %\vskip 1cm
-{\large\bf saMsakxqqta kaqtigaLa saMkiSxpatx sUci}
+{\large\bf 1. saMsakxqqta kaqtigaLa saMkiSxpatx sUci}
 \end{center}
 
 {\renewcommand{\arraystretch}{1.35}
@@ -17,113 +17,150 @@
 \endlastfoot
 {\bf 1. a.viV.sA.saM.} &  anAdiviVrasheYvasArasaMgarxha (BA-1) (kananxDa vAyxKAyxsahita) &-& saMpAdaneya sidadhxviVraNaNx shivayoVgi.\newline saM. ji.e. shivaliMgayayx, & basava samiti, beMgaLUru, 1999\\
 %2. & anAdivivrasheYvasArasaMgarxha : (BA-1) &-& saM. maNUra maThAdhayxkaSx malilxkAjuRnashAsitxrXV, viVrasheYva liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
-{\bf 2. a.viV.sA.saM.} & anAdiviVrasheYvasArasaMgarxha (BA-2) (kananxDa vAyxKAyx sahita) &-& parx.saM. DA. si. shivakumArasAvxmi & viVrasheYva sAhitayx parxtiSAThxna, viBUtipura maTha, beMgaLUru, 2005\\
+{\bf 2. a.viV.sA.saM.} & anAdiviVrasheYvasArasaMgarxha (BA-2) (kananxDa vAyxKAyxsahita) &-& parx.saM. DA. si. shivakumArasAvxmi & viVrasheYva sAhitayx parxtiSAThxna, viBUtipura maTha\newline beMgaLUru, 2005\\
+{\bf 3. a.sA.} & anuBavasAraH &-& &\\
 %3. & anuBavasUtarx (mAyideVva)\newline (hiMdiV vAyxKAyx sahita) &-& saM. varxjavalalxBadivxveVdiV, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1998\\
-{\bf 3. a.sU.} & anuBavasUtarx (mAyideVva)\newline (kananxDAnuvAda sahita) &-& saM. DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAThxna,\newline beMgaLUru, 2003\\
-{\bf 4. a.koV.} &  amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& (vAyx) shirxV BAnUji diVkiSxta & cwKaMbA saMsakxqqta parxtiSAThxna, nava dehali (divx.mu), 1978\\
-{\bf 5. atha.shiKA.} & athavaRshiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasiV dAsf, dehali, 1980\\
-{\bf 6. atha.shirasf.} & athavaRshiroVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf. dehali, 1980\\
-{\bf 7. aBi.shA.} & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& saM. porx. ke.Ti. pAMDuraMgi &  beMgaLUru vishavxvidAyxlaya, beMgaLUru, 1978\\
-{\bf 8. aSATx.} & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& saM. sAvxmiV parxhAlxda giri veVdAMtakeVsari & kaqSaNxdAsa akAdemi, dehali, (divx.mu), 1987\\
-{\bf 9. amaq.Bi.} & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf,  dehali, 1980\\
-{\bf 10. akaSx.mA.u.} & akaSxmAlikoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 11. A.sutx.} & AtAmxpaRNasutxti (apapxyayx diVkiSxta)\newline (bAlaboVdhiniV vAyxKAyxsahita) &-& (vAyx) shirxV shivAnaMdayati & shirxVmadapapxyayx diVkiSxta garxMthAvali parxkAshana samiti, sikaMdarAbAdf, 1980\\
-{\bf 12. I.u.} & IshAvAsoyxVpaniSatf &-& rAmakaqSaNxmaTha & madArxsf, 1948\\
-{\bf 13. u.ma.} & upaniSadAvxkayxmahAkoVshaH &-& shirxV gajAnana shaMBu sAdhale & cwKaMbA vidAyxBavana, vAraNAsi, 1990\\
-{\bf 14. u.garx.} & upaniSatasxMgarxhaH &-& saM. paM. jagadiVshashAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 15. Qu.veV.} & QugevxVda &-& veYdika saMshoVdhana maMDali & puNe\\
-{\bf 16. ai.u.} & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma & meYsUru, 1954 (nA.mu. 1984)\\
-{\bf 17. kaTha.u.} & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 4. a.sU.} & anuBavasUtarxmf (mAyideVva)\newline (kananxDAnuvAda sahita) &-& saM. DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAThxna,\newline beMgaLUru, 2003\\
+{\bf 5. a.koV.} &  amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& (vAyx) shirxV BAnUji diVkiSxta & cwKaMbA saMsakxqqta parxtiSAThxna, nava dehali (divx.mu), 1978\\
+{\bf 6. atha.shiKA.} & athavaRshiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 7. atha.shirasf.} & athavaRshira upaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 8. aBi.shA.} & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& saM. porx. ke.Ti. pAMDuraMgi &  beMgaLUru vishavxvidAyxlaya\newline beMgaLUru, 1978\\
+{\bf 9. aSATx.} & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& saM. sAvxmiV parxhAlxda giri veVdAMtakeVsari & kaqSaNxdAsa akAdemi\newline dehali, (divx.mu), 1987\\
+{\bf 10. amaq.Bi.} & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf,  dehali, 1980\\
+{\bf 11. akaSx.mA.u.} & akaSxmAlikoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 12. A.sutx.} & AtAmxpaRNasutxti (apapxyayx diVkiSxta)\newline (bAlaboVdhiniV vAyxKAyxsahita) &-& (vAyx) shirxV shivAnaMda yati & shirxVmadapapxyayx diVkiSxta garxMthAvali parxkAshana samiti, sikaMdarAbAdf\newline 1980\\
+{\bf 13. I.u.} & IshAvAsoyxVpaniSatf &-& rAmakaqSaNx maTha & madArxsf, 1948\\
+{\bf 14. u.ma.} & upaniSadAvxkayxmahAkoVshaH &-& shirxV gajAnana shaMBu sAdhale & cwKaMbA vidAyxBavana\newline vAraNAsi, 1990\\
+{\bf 15. u.vA.A.} & utatxra vAtUlAgamaH &-& & \\
+{\bf 15. u.garx.} & upaniSatasxMgarxhaH &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 16. Qu.veV.} & QugevxVdaH &-& veYdika saMshoVdhana maMDali & puNe\\
+{\bf 17. ai.u.} & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma & meYsUru, 1954 (nA.mu. 1984)\\
+{\bf 18. kaTha.u.} & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 %20. & kAraNAgama (kirxyApAda)\newline (hiMdiVBASAnuvAda sahita) &-& saM. porx. rAmacaMdarxpAMDeVya sheYva BAratiV shoVdha parxtiSAThxna, vArANasi, 1994\\
-{\bf 18. kA.A.ka.} & kAraNAgama (kirxyApAda)\newline (kananxDAnuvAda sahita) &-& DA. malilxkAjuRna paraDiDx & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1999\\
-{\bf 19. kAmika.} & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx & ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx, beMgaLUru, 1985\\
-{\bf 20. kA.ru.u.} & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 21. ki.A.} & kiraNAgamaH\newline (taMtarxsaMgarxhaH) &-& hUTagiVmaTha & soVlApura, 1914\\
-{\bf 22. keV.u.} & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banAsaridAsf, dehali, 1980\\
-{\bf 23. keY.sA.} & keYvalayxsAraH\newline (maritoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1988\\
-{\bf 24. keY.u.} & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH & parxboVdha pusatxka mAlA, beMgaLUru, 1951\\
-{\bf 25. kirx.sA.} & \hbox{kirxyAsAra (niVlakaMTha shivAcAyaR)}\newline (BA-1, 2, 3) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1954, 1957, 1958\\
+{\bf 19. kA.A.ka.} & kAraNAgamaH (kirxyApAda)\newline (kananxDAnuvAda sahita) &-& DA. malilxkAjuRna paraDiDx & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 1999\\
+{\bf 20. kAmika.} & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx & ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx\newline beMgaLUru, 1985\\
+{\bf 21. kA.ru.u.} & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 22. kA.vi.} & kAlidAsana vikarxmoVvaRshiVyamf &-& & \\
+{\bf 22. ki.A.} & kiraNAgamaH\newline (taMtarxsaMgarxhaH) &-& hUTagiVmaTha & soVlApura, 1914\\
+{\bf 23. kU.pu.} & kUmaR purANamf &-& & \\
+{\bf 23. keV.u.} & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banAsaridAsf\newline dehali, 1980\\
+{\bf 24. keY.sA.} & keYvalayxsAraH\newline (maritoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1988\\
+{\bf 25. keY.u.} & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH & parxboVdha pusatxka mAlA, beMgaLUru\newline 1951\\
+{\bf 26. kirx.sA.} & \hbox{kirxyAsAraH(niVlakaMTha shivAcAyaR)}\newline (BA-1, 2, 3) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1954\newline 1957, 1958\\
+{\bf 27. gw.kA.} & gwDapAdakArikA &-& & \\
 %26. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (AMgalxBASAnuvAda sahita) &-& saM. DA. ramAGoVSf, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-{\bf 26. caM.A.} & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& saM. DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2002\\
-{\bf 27. CAM.u.} & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma, meYsUru, 1995\\
-{\bf 28. jA.u.} & jAbAluyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 29. ta.parxkA.} & tatatxvXparxkAshikA\,(aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2010\\
-{\bf 30. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 31. teY.u.} & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma, meYsUru, 1993\\
-{\bf 32. da.u.} & dakiSxNAmUtuRyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 33. deVviV.A.} & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBa divxveVdi & sheYvaBAratiV shoVdha parxtiSAThxna, vArANasi, 2000\\
-{\bf 34. nAda.u.} & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 35. nirukatx.} & nirukatxmf (yAsakx)\newline (niGaMTu sahita) &-& DA. lakaSxmXNa savxrUpa & moVtilAla banArasidAsf, dehali, 1984\\
-{\bf 36. niV.ru.u.} & niVlarudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 37. paM.barx.u.} & paMcabarxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 38. paMDi.ca.} & paMDitArAdhayx caritamf\newline (gururAja kavi)\newline (kananxDAnuvAda sahita) &-& (saM) enf. Arf. karibasavashAsitxrXV & viVrasheYva garxMtha parxkAshikA, meYsUru, BAga-1 (1908), BAga-2 (1913)\\
-{\bf 39. parx.haq.} & parxtayxBijAcnxhaqdayamf &-& kAshimxVra saMsakxqqta garxMthAvali & shirxVnagara, 1911\\
-{\bf 40. parx.u.} & parxshonxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSaNxmaTha, meYsUru, 1993\\
-{\bf 41. parx.jA.u.} & parxsAdajAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsa,\newline dehali, 1980\\
-{\bf 42. parx.giV.} & parxBugiVtA (mAyideVva) &-& (saM) porx. si. mahAdeVvapapx & saMshoVdhanAkoVTi, beMgaLUru, 2001\\
-{\bf 43. pAra.A.} & pArameVshavxrAgama\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBa divxveVdi & sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-{\bf 44. pAra.A.} & pArameVshavxrAgama\newline (kananxDAnuvAda sahita) &-& (saM) DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2000\\
-{\bf 45. pAshu.A.} & pAshupatAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM. ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
-{\bf 46. peY.u.} & peYMgaloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 47. pwSakx.A.} & pwSakxrAgama\newline (sidAdhxMtasheVKara) &-& porx. siVtArAma soVmayAji & meYsUru, 1901\\
-{\bf 48. baq.u.} & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 49. baq.jA.u.} & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 50. barx.u.} & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 51. Ba.giV.} & BagavadigxVtA &-& giVtA perxsf & goVraKfpurf, 2008\\
-{\bf 52. Ba.viV.BA.} & BagavadigxVtA viVrasheYvaBASayx &-& DA. Ti.ji. sidadhxpApxrAdhayx & baqhanamxTha,\newline citarxdugaR, 1935\\
-{\bf 53. BA.pari.} & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka shabAdxvaliV AyoVga & BArata sakARra, navadehali, 1999\\
-{\bf 54. makuTa.} & makuTAgama\newline (kirxyApAda-cayAR\-pAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1998\\
-{\bf 55. ma.nA.u.} & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayxkAra. shirxV vaqSaBeVMdarx paMDita shivAcAyaR & vishAvxrAdhayx gurukula, kAshiV, 1959\\
-{\bf 56. mahoV.u.} & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsa,\newline dehali, 1980\\
-{\bf 57. mAM.u.} & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma, meYsUru, 1984\\
-{\bf 58. muM.u.} & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma, meYsUru, 1957\\
-{\bf 59. maq.A.} & maqgeVMdArxgama\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
-{\bf 60. meYterxVya.} & meYterxVyoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 61. meYterxVya.} & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 62. yoVga.shi.} & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 63. ra.vaM.} & raGuvaMsha (kAlidAsa) &-& niNaRyasAgara perxsf & muMbayi, 1932\\
-{\bf 64. rudarx.jA.u.} & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 65. ru.u.} & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 66. ru.haq.u.} & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 67. liM.u.} & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 68. liM.dhA.caM.} & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBa divxveVdi & sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1988\\
-{\bf 69. vA.A.} & vAtulAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
-{\bf 70. visheV.parx.} & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM) paM. veY. nAgeVsha shAsitxrX & shirxV muruGAmaTha, dhAravADa, 1961\\
-{\bf 71. viV.A.u.} & viVrAgamoVtatxramf (BAga-1) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1988\\
-{\bf 72. viV.A.caM.} & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxrashAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA, hubabxLiLx, 1936\\
-{\bf 73. viV.u.parx.} & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi & \hbox{shirxV duraduMDeVshavxra}\-maTha, arabAvi, beLagAvi jilelx, 1936\\
-{\bf 74. viV.dha.shi.} & viVrasheYvadhamaR shiroVmaNi\newline (kananxDa vAyxKAyx sahita) &-& (vAyx) eM. basavaliMga shAsitxrX & viVrasheYvagarxMtha parxkAshikA garxMthAvali, meYsUru, 1908\\
-{\bf 75. viV.parx.} & viVrasheYva parxdiVpikA &-& shirxV jayacAmarAjeVMdarx garxMthamAlA & meYsUru, 1918\\
-{\bf 76. viV.mA.saM.} & viVramAheVshavxrAcAra saMgarxha : (BA-1)\newline (niVlakaMThanAganAthAcAyaR viracita) &-& (saM.) eM.esf. basavarAjayayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1991\\
-{\bf 77. } & viVrAgama (kananxDa vAyxKAyxna sahita) &-& (saM) DA. ja.ca.ni. & shirxV jagadugxru paMcAcAyaR seVvA saMGa, gadaga-beTageVri, 1962\\
-{\bf 78. viV.sheY.u.} & viVrasheYvoVpaniSatf &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf, meYsUru, 1981 (ELaneya Avaqtitx)\\
-{\bf 79. viV.sa.saM.} & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininxmaTha & shirxV jagadugxru garxMtha parxkAshikA garxMthAvali, mUrusAvira maTha, hubabxLiLx, 1964\\
-{\bf 80. veY.shiva.} & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR mudarxNAlaya, meYsUru, 1980 (eMTaneya Avaqtitx)\\
-{\bf 81. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYva ciMtAmaNi\newline (utatxrakAMDa) - (niTUTxru naMja\-NAyaR) (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV & shirxV datatx parxsAda siTxVmf perxsf, soVlApura, 1908\\
-{\bf 82. sha.u.} & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasiV dAsf, dehali, 1970\\
-{\bf 83. sha.kw.} & shabAdxthaR kwsutxBa\newline (saMsakxqqta-kananxDa niGaMTu)\newline (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR & bApokxV parxkAshana, beMgaLUru, 1999\\
-{\bf 84. shakitx.vi.} & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi & rAjayx patArxgAra ilAKe, (kanARTaka sakARra), beMgaLUru, 2009\\
-{\bf 85. shata.tarx.} & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVsha shAsitxrXV & muruGamaTha, dhAravADa, 1964\\
-{\bf 86. shi.ta.ra.} & shivatatatxvXratAnxkara\newline (keLadi basava BUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
-{\bf 87. shi.maM.} & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf & paMcAcAyaR perxsf, meYsUru, 1929\\
-{\bf 88. shi.yoV.parx.} & shivayoVga parxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDA TiVkA sahita) &-& TiVkAkAra, basavArAdhayx & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
-{\bf 89. shiva.shi.} & shivAdhikayxshiKAmaNi\newline (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKara sAvxmi & namaHshivAya maTha, meYsUru, 1929\\
-{\bf 90. sha.vi.da.} & shakitxvishiSATxdevxYta dashaRnamf &-& DA. Ti.ji. sidadhxpApxrAdhayx & gubibx shirxV cenanxbasaveVshavxra garxMthamAlA, meYsUru, 1934\\
-{\bf 91. shivA.sw.} & shivAgamaswraBa (kananxDa) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
-{\bf 92. sheY.i.ta.} & \hbox{sheYvadashaRna itihAsa matutx tatatxvXparxkAsha}\newline (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & parxboVdha garxMthamAlA, meYsUru, 1974\\
-{\bf 93. sheY.u.} & sheYvoVpaniSatf\newline {\small\rm (SAIVOPANISADS)} &-& (saM) paM. mahAdeVvashAsitxrXV & aDAyxrf leYbarxri, madArxsf, 1925\\
-{\bf 94. sheY.pa.} & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxna shivAcAyaR) &-& (saM) ecf.Arf. raMgasAvxmi ayayxMgArf & sakARri mudarxNAlaya, meYsUru, 1950\\
-{\bf 95. sheY.ra.} & \hbox{sheYvaratAnxkara (joyxVtinARtha)}\newline (BAga-1) &-& (saM) DA. si.enf. basavarAju & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1992\\
-{\bf 96. sheY.ra.}  & \hbox{sheYvaratAnxkara (joyxVtinARtha)}\newline (BAga-2) &-& (saM) malilxkAjuRna shAsitxrXV & liMgi bArxhamxNa garxMthamAlA, soVlApura, 1909\\
-{\bf 97. sheY.si.diV.} & sheYvasidAdhxMtadiVpikA\newline (mAheVshavxra) &-& (saM) pi.Arf. karibasavashAsitxrXV & shaMkaravilAsa perxsf, meYsUru, 1907\\
-{\bf 98. shurxti.sA.} & shurxtisAraBASayx\newline (\hbox{shirxV shivapUjAshivaliMgashiva}\-yoVgiVMdarx) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1913\\
-{\bf 99. shirxV.BA.} & shirxVkaraBASayx (shirxVpati paMDita) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru (BAga-1, 1977), (BAga-2, 1978)\\
-{\bf 100. shevxVtA.u.} & shevxVtAshavxtaroVpaniSatf\newline (viVrasheYvaBASoyxVpeVtA) &-& DA. Ti.ji. sidadhxpApxrAdhayx & shirxV muruGAmaTha, citarxdugaR, 1965\\
-{\bf 101. sa.u.} & sadAnaMdoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-{\bf 102. sa.da.saM.} & savaRdashaRnasaMgarxha\newline (mAdhavAcAyaR) &-& (saM) DA. imamxDi shivabasavasAvxmigaLu & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
-{\bf 103. sa.pa.sholxV.} & savAyxKAyxpaMcasholxVkiV\newline (keLadi basavarAja) &-& (saM) basavaliMga shAsitxrXV & enf.Arf. karibasavashAsitxrXV, meYsUru, 1912\\
-{\bf 104. si.shi.} & sidAdhxMta shiKAmaNi\newline (shivayoVgi shivAcAyaR) &-& (saM) DA. caMdarxsheVKara shivAcAyaR mahAsAvxmigaLu & viVrasheYva sAhitayx saMshoVdhana maMDaLa, soVlApura, 1990\\
-{\bf 105. sU.A.} & sUkASxmXgama (kananxDAnuvAda) &-& SaNumxKayayx akUkxramaTha & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2001\\
+{\bf 27. caM.A.} & caMdarxjAcnxnAgamaH\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& saM. DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2002\\
+{\bf 28. CAM.u.} & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma\newline meYsUru, 1995\\
+{\bf 29. jA.u.} & jAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 30. jAcnx.A.} & jAcnxnoVtatxrAgama &-& & \\
+{\bf 30. ta.parxkA.} & tatatxvXparxkAshikA\,(aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2010\\
+{\bf 31. ta.parxdiV.} & tatatxvXparxdiVpikA &-& & \\
+{\bf 31. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 32. teY.A.} & teYtitxriVyAraNayxkamf &-& & \\
+{\bf 32. teY.u.} & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma, meYsUru, 1993\\
+{\bf 33. da.u.} & dakiSxNAmUtuRyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 34. diVkASx.parx.} & diVkASxparxkaraNamf &-& & \\
+{\bf 34. dAvx.shi.kirx.} & dAvxdashashivaliMgAjaRnakirxyA &-& & \\
+{\bf 34. deVviV.A.} & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBa divxveVdi & sheYvaBAratiV shoVdha parxtiSAThxna, vArANasi\newline 2000\\
+{\bf 35. nAda.u.} & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 36. nirukatx.} & nirukatxmf (yAsakx)\newline (niGaMTu sahita) &-& DA. lakaSxmXNa savxrUpa & moVtilAla banArasidAsf\newline dehali, 1984\\
+{\bf 37. niV.ru.u.} & niVlarudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 38. paM.barx.u.} & paMcabarxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 39. paMDi.ca.} & paMDitArAdhayx caritamf\newline (gururAja kavi)\newline (kananxDAnuvAda sahita) &-& (saM) enf. Arf. karibasava shAsitxrXV & viVrasheYva garxMtha parxkAshikA, meYsUru\newline BAga-1 (1908)\newline BAga-2 (1913)\\
+{\bf 40. parx.haq.} & parxtayxBijAcnxhaqdayamf &-& kAshimxVra saMsakxqqta garxMthAvali & shirxVnagara, 1911\\
+{\bf 41. parx.u.} & parxshonxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSaNx maTha\newline meYsUru, 1993\\
+{\bf 42. parx.jA.u.} & parxsAdajAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsa\newline dehali, 1980\\
+{\bf 43. parx.giV.} & parxBugiVtA (mAyideVva) &-& (saM) porx. si. mahAdeVvapapx & saMshoVdhanA koVTi\newline beMgaLUru, 2001\\
+{\bf 44. pAra.A.} & pArameVshavxrAgamaH\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBa divxveVdi & sheYva BArati shoVdha parxtiSAThxna, vArANasi\newline 1995\\
+{\bf 45. pAra.A.} & pArameVshavxrAgamaH\newline (kananxDAnuvAda sahita) &-& (saM) DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2000\\
+{\bf 46. pAshu.A.} & pAshupatAgamaH\newline (shivAgamaswraBa) &-& vidAvxnf eM. ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1986\\
+{\bf 47. peY.u.} & peYMgaloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 48. pwSakx.A.} & pwSakxrAgamaH\newline (sidAdhxMtasheVKara) &-& porx. siVtArAma soVmayAji & meYsUru, 1901\\
+{\bf 49. baq.u.} & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 50. baq.jA.u.} & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 51. barx.u.} & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 52. barx.pu.} & barxhAmxMDapurANamf &-& & \\
+{\bf 52. Ba.jA.u.} & BasamxjAbAloVpaniSatf &-& & \\
+{\bf 52. barxsU.} & barxhamxsUtarxmf &-& & \\
+{\bf 52. Ba.giV.} & BagavadigxVtA &-& giVtA perxsf & goVraKfpurf\newline 2008\\
+{\bf 53. Ba.viV.BA.} & BagavadigxVtA viVrasheYvaBASayxmf &-& DA. Ti.ji. sidadhxpApxrAdhayx & baqhanamxTha\newline citarxdugaR, 1935\\
+{\bf 54. BA.pari.} & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka\newline shabAdxvaliV AyoVga & BArata sakARra\newline navadehali, 1999\\
+{\bf 55. makuTa.} & makuTAgamaH\newline (kirxyApAda-cayAR\-pAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 1998\\
+{\bf 56. ma.nA.u.} & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayxkAra: shirxV vaqSaBeVMdarx paMDita shivAcAyaR & vishAvxrAdhayx gurukula, kAshiV, 1959\\
+{\bf 57. ma.BA.} & mahABAratamf &-& & \\
+{\bf 57. mahoV.u.} & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsa\newline dehali, 1980\\
+{\bf 58. mAM.u.} & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1984\\
+{\bf 59. mAM.kA.} & mAMDUkayxkArikA &-& & \\
+{\bf 59. muM.u.} & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1957\\
+{\bf 60. mAM.saM.} & mAdhayxMdina saMhitA &-& & \\
+{\bf 60. maq.A.} & maqgeVMdArxgamaH\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
+{\bf 61. meYterxVya.} & meYterxVyoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 63. yoV.A.} & yoVgajAgamaH &-& & \\
+{\bf 63. yoV.rA.u.} & yoVgarAjoVpaniSatf &-& & \\
+{\bf 63. yoVga.shi.} & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 64. yoV.su.} & yoVgasUtarxmf &-& & \\
+{\bf 64. yoV.pA.} & yoVgapAvaLi &-& & \\
+{\bf 64. ra.vaM.} & raGuvaMshamf (kAlidAsa) &-& niNaRyasAgara perxsf & muMbayi, 1932\\
+{\bf 65. rudarx.jA.u.} & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 66. ru.u.} & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 67. rudarx.} & rudArxdhAyxyaH &-& & \\
+{\bf 67. ru.haq.u.} & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 68. liM.u.} & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 69. leY.pu.} & leYMgayx purANamf &-& & \\
+{\bf 69. liM.dhA.caM.} & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBa divxveVdi & sheYvaBArati shoVdha parxtiSAThxna, vArANasi\newline 1988\\
+{\bf 70. liM.pu.} & liMgapurANamf &-& & \\
+{\bf 70. vA.A.} & vAtulAgamaH\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1986\\
+{\bf 71. vA.kAM.} & vAdakAMDaH &-& & \\
+{\bf 71. vAja.saM.} & vAjasaneVyiV saMhitA &-& & \\
+{\bf 71. visheV.parx.} & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM) paM. veY. nAgeVsha shAsitxrXV & shirxV muruGAmaTha\newline dhAravADa, 1961\\
+{\bf 72. viV.A.u.} & viVrAgamoVtatxramf (BAga-1) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1988\\
+{\bf 73. viV.A.caM.} & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxrashAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA\newline hubabxLiLx, 1936\\
+{\bf 74. viV.u.parx.} & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi & \hbox{shirxV duraduMDeVshavxra}\-maTha, araBAvi\newline beLagAvi jilelx\newline 1936\\
+{\bf 75. viVra.u.} & viVrAgamoVpaniSatf &-& & \\
+{\bf 75. viV.pu.} & viVraBadarx purANamf &-& & \\
+{\bf 75. viV.dha.shi.} & viVrasheYvadhamaR shiroVmaNiH\newline (kananxDa vAyxKAyxsahita) &-& (vAyx) eM. basavaliMga shAsitxrXV & viVrasheYvagarxMtha parxkAshikA garxMthAvali\newline meYsUru, 1908\\
+{\bf viV.BA.} & viVrasheYva BASayxmf &-& & \\
+{\bf 76. viV.parx.} & viVrasheYva parxdiVpikA &-& shirxV jayacAmarAjeVMdarx garxMthamAlA & meYsUru, 1918\\
+{\bf 77. viV.mA.saM.} & viVramAheVshavxrAcAra saMgarxha : (BAga-1)\newline (niVlakaMThanAganAthAcAyaR viracita) &-& (saM.) eM.esf. basavarAjayayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1991\\
+{\bf 78. } & viVrAgama (kananxDa vAyxKAyxnasahita) &-& (saM) DA. ja.ca.ni. & shirxV jagadugxru paMcAcAyaR seVvA saMGa\newline gadaga-beTageVri\newline 1962\\
+{\bf 79. vA.shu.A.} & vAtlashudAdhxgamaH &-& & \\
+{\bf 79. vA.saM.} & vAyaviVya saMhitA &-& & \\
+{\bf 79. videyxV.saM.} & videyxVshavxra saMhitA &-& & \\
+{\bf 79. viV.A.kw.} & viVrasheYvAcAra kwsutxBaH &-& & \\
+{\bf 79. viV.A.ci} & viVrasheYvAcAra ciMtAmaNiH &-& & \\
+{\bf 79. viV.A.parx.} & viVrasheYvAcAra parxdiVpikA &-& & \\
+{\bf 79. viV.sheY.u.} & viVrasheYvoVpaniSatf &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1981 (ELaneya Avaqtitx)\\
+{\bf 80. viV.sa.saM.} & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininxmaTha & shirxV jagadugxru garxMtha parxkAshikA garxMthAvali\newline mUrusAvira maTha\newline hubabxLiLx, 1964\\
+{\bf 81. veV.ciM.} & veVdAMta ciMtAmaNiH &-& & \\
+{\bf 81. veV.sA.u.} & veVdAMta sAroVpaniSatf &-& & \\
+{\bf 81. veY.shiva.} & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR mudarxNAlaya\newline meYsUru, 1980 (eMTaneya Avaqtitx)\\
+{\bf 82. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYva ciMtAmaNi\newline (utatxrakAMDa) - (niTUTxru naMja\-NAyaR) (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV & shirxV datatxparxsAda siTxVmf perxsf\newline soVlApura, 1908\\
+{\bf 83. shaM.saM.} & shaMkarasaMhitA &-& & \\
+{\bf 83. sha.u.} & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1970\\
+{\bf 84. sha.kw.} & shabAdxthaRkwsutxBaH\newline (saMsakxqqta-kananxDa niGaMTu)\newline (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR & bApokxV parxkAshana\newline beMgaLUru, 1999\\
+{\bf 85. shakitx.vi.} & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi & rAjayx patArxgAra ilAKe (kanARTaka sakARra), beMgaLUru, 2009\\
+{\bf 86. shata.tarx.} & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVsha shAsitxrXV & muruGAmaTha, dhAravADa, 1964\\
+%raghu, page 21
+{\bf 87. shi.ta.ra.} & shivatatatxvXratAnxkara\newline (keLadi basava BUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
+{\bf 88. shi.maM.} & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf & paMcAcAyaR perxsf, meYsUru, 1929\\
+{\bf 89. shi.yoV.parx.} & shivayoVga parxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDA TiVkA sahita) &-& TiVkAkAra, basavArAdhayx & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
+{\bf 90. shiva.shi.} & shivAdhikayxshiKAmaNi\newline (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKara sAvxmi & namaHshivAya maTha, meYsUru, 1929\\
+{\bf 91. sha.vi.da.} & shakitxvishiSATxdevxYta dashaRnamf &-& DA. Ti.ji. sidadhxpApxrAdhayx & gubibx shirxV cenanxbasaveVshavxra garxMthamAlA, meYsUru, 1934\\
+{\bf 92. shivA.sw.} & shivAgamaswraBa (kananxDa) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
+{\bf 93. sheY.i.ta.} & \hbox{sheYvadashaRna itihAsa matutx tatatxvXparxkAsha}\newline (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & parxboVdha garxMthamAlA, meYsUru, 1974\\
+{\bf 94. sheY.u.} & sheYvoVpaniSatf\newline {\small\rm (SAIVOPANISADS)} &-& (saM) paM. mahAdeVvashAsitxrXV & aDAyxrf leYbarxri, madArxsf, 1925\\
+{\bf 95. sheY.pa.} & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxna shivAcAyaR) &-& (saM) ecf.Arf. raMgasAvxmi ayayxMgArf & sakARri mudarxNAlaya, meYsUru, 1950\\
+{\bf 96. sheY.ra.} & \hbox{sheYvaratAnxkara (joyxVtinARtha)}\newline (BAga-1) &-& (saM) DA. si.enf. basavarAju & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1992\\
+{\bf 97. sheY.ra.}  & \hbox{sheYvaratAnxkara (joyxVtinARtha)}\newline (BAga-2) &-& (saM) malilxkAjuRna shAsitxrXV & liMgi bArxhamxNa garxMthamAlA, soVlApura, 1909\\
+{\bf 98. sheY.si.diV.} & sheYvasidAdhxMtadiVpikA\newline (mAheVshavxra) &-& (saM) pi.Arf. karibasavashAsitxrXV & shaMkaravilAsa perxsf, meYsUru, 1907\\
+{\bf 99. shurxti.sA.} & shurxtisAraBASayx\newline (\hbox{shirxV shivapUjAshivaliMgashiva}\-yoVgiVMdarx) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1913\\
+{\bf 100. shirxV.BA.} & shirxVkaraBASayx (shirxVpati paMDita) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru (BAga-1, 1977), (BAga-2, 1978)\\
+{\bf 101. shevxVtA.u.} & shevxVtAshavxtaroVpaniSatf\newline (viVrasheYvaBASoyxVpeVtA) &-& DA. Ti.ji. sidadhxpApxrAdhayx & shirxV muruGAmaTha, citarxdugaR, 1965\\
+{\bf 102. sa.u.} & sadAnaMdoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 103. sa.da.saM.} & savaRdashaRnasaMgarxha\newline (mAdhavAcAyaR) &-& (saM) DA. imamxDi shivabasavasAvxmigaLu & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
+{\bf 104. sa.pa.sholxV.} & savAyxKAyxpaMcasholxVkiV\newline (keLadi basavarAja) &-& (saM) basavaliMga shAsitxrXV & enf.Arf. karibasavashAsitxrXV, meYsUru, 1912\\
+{\bf 105. si.shi.} & sidAdhxMta shiKAmaNi\newline (shivayoVgi shivAcAyaR) &-& (saM) DA. caMdarxsheVKara shivAcAyaR mahAsAvxmigaLu & viVrasheYva sAhitayx saMshoVdhana maMDaLa, soVlApura, 1990\\
+{\bf 106. sU.A.} & sUkASxmXgama (kananxDAnuvAda) &-& SaNumxKayayx akUkxramaTha & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2001\\
 %\hline
 \end{longtable}}
 
